--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layout">
 <head>
-<meta charset="UTF-8"/>
-<title>Insert title here</title>
+  <title>Content page 1</title>
+  <script src="content-script.js"></script>
 </head>
 <body>
-	<p>This is my homepage</p>
+  <section layout:fragment="content">
+    <p>This is a paragraph from content page 1</p>
+  </section>
+  <footer>
+    <p layout:fragment="custom-footer">This is some footer content from content page 1</p>
+  </footer>
 </body>
 </html>
