--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorator="layout">
+	layout:decorator="layout">
 <head>
-  <title>Content page 1</title>
-  <script src="content-script.js"></script>
+<title>Home</title>
+<script src="content-script.js"></script>
 </head>
 <body>
-  <section layout:fragment="content">
-    <p>This is a paragraph from content page 1</p>
-  </section>
-  <footer>
-    <p layout:fragment="custom-footer">This is some footer content from content page 1</p>
-  </footer>
+	<div class="container">
+		<section layout:fragment="content">
+			<p>This is a paragraph from content page 1</p>
+		</section>
+	</div>
+	<footer>
+		<p layout:fragment="custom-footer">This is some footer content
+			from content page 1</p>
+	</footer>
 </body>
 </html>
