--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -68,10 +68,12 @@
 			</div>
 		</section>
 	</div>
-	<footer>
-		<p layout:fragment="custom-footer">This is some footer content
-			from content page 1</p>
-	</footer>
+	<footer class="footer">
+      <div class="container">
+		<p layout:fragment="custom-footer">login page footer</p>
+      </div>
+    </footer>
+	
 </body>
 </html>
 
