--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,7 @@
 		</section>
 	</div>
 	<footer>
-		<p layout:fragment="custom-footer">This is some footer content
-			from content page 1</p>
+		<div layout:fragment="custom-footer"></div>
 	</footer>
 </body>
 </html>
