--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -15,6 +15,10 @@ body{
   margin-bottom: 60px;
 }
 
+ul {
+  list-style-type: none;
+}
+
 #wrapper{
 	color: #cfcfcf;
 //	padding: 2px
@@ -69,6 +73,7 @@ body{
 }
 /* login box ends */
 
+/* footer page starts */
 .footer {
   position: absolute;
   bottom: 0;
@@ -76,4 +81,18 @@ body{
   /* Set the fixed height of the footer here */
   height: 15%;
   background-color: #333333;
+  color:#FFFFFF;
 }
+
+.footer-content{
+    text-align: center;
+    padding: 5px;
+    margin-top:8px;
+}
+/* footer page ends */
+
+/* contact page starts */
+.h1 small {
+	font-size: 24px;
+}
+/* contact page ends */
