--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section layout:fragment="content">
-    <p>This is a paragraph from content page 1</p>
+    <p>Waiting for some awesomen stuff</p>
   </section>
   <footer>
     <p layout:fragment="custom-footer">This is some footer content from content page 1</p>
