--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,8 +11,11 @@
 			<p>This is a paragraph from content page 1</p>
 		</section>
 	</div>
-	<footer>
-		<div layout:fragment="custom-footer"></div>
-	</footer>
+	<!-- 
+	<footer class="footer">
+		<div class="container">
+			<div layout:fragment="custom-footer"></div>
+		</div>
+	</footer> -->
 </body>
 </html>
