--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -58,9 +58,9 @@
 				<div class="row footer-content">
 					<div class="col-sm-4 hidden-xs">
 						<ul>
-							<li>Project</li>
-							<li>Blog</li>
-							<li>Contact</li>
+							<li><a href="">Resume</a></li>
+							<li><a href="">Project</a></li>
+							<li><a href="">Blog</a></li>
 						</ul>
 					</div>
 					<div class="col-sm-4">
@@ -72,9 +72,9 @@
 					</div>
 					<div class="col-sm-4 hidden-xs">
 						<ul>
-							<li>github</li>
-							<li>linkedin</li>
-							<li>twitter</li>
+							<li><a href="">github</a></li>
+							<li><a href="">linkedin</a></li>
+							<li><a href="">twitter</a></li>
 						</ul>
 					</div>	
 				</div>
