--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -19,6 +19,11 @@ ul {
   list-style-type: none;
 }
 
+a{
+	color: #eadbdb;
+	text-decoration: none !important;
+}
+
 #wrapper{
 	color: #cfcfcf;
 //	padding: 2px
