--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -25,22 +25,21 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
-										<label for="name"> Name</label> <input type="text"
-											class="form-control" id="name" placeholder="Enter name"
-											required="required" />
+										<label for="name"> Name</label>
+										<input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
 									</div>
 									<div class="form-group">
 										<label for="email"> Email Address</label>
 										<div class="input-group">
-											<span class="input-group-addon"><span
-												class="glyphicon glyphicon-envelope"></span> </span> <input
-												type="email" class="form-control" id="email"
-												placeholder="Enter email" required="required" />
+											<span class="input-group-addon">
+												<span class="glyphicon glyphicon-envelope"></span> 
+											</span>
+											<input type="email" class="form-control" id="email" placeholder="Enter email" required="required" />
 										</div>
 									</div>
 									<div class="form-group">
-										<label for="subject"> Subject</label> <select id="subject"
-											name="subject" class="form-control" required="required">
+										<label for="subject"> Subject</label>
+										<select id="subject" name="subject" class="form-control" required="required">
 											<option value="na" selected="">Choose One:</option>
 											<option value="service">General Inquiry</option>
 											<option value="suggestions">Suggestions</option>
