--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
 								<div style="margin-top: 10px" class="form-group">
 									<!-- Button -->
 									<div class="col-sm-12 controls">
-										<a id="btn-login" href="#" class="btn btn-success">Login </a>
+										<button type="submit" class="btn btn-success">Login </button>
 									</div>
 								</div>
 
