--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -9,8 +9,11 @@
   <section layout:fragment="content">
     <p>This is a paragraph from content page 1</p>
   </section>
-  <footer>
-    <p layout:fragment="custom-footer">This is some footer content from content page 1</p>
-  </footer>
+  <!-- 
+	<footer class="footer">
+		<div class="container">
+			<div layout:fragment="custom-footer"></div>
+		</div>
+	</footer> -->
 </body>
 </html>
