--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,7 +8,7 @@
 	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous" />
-<link rel="stylesheet" th:href="@{css/site.css}" />
+<link rel="stylesheet" th:href="@{../css/site.css}" />
 </head>
 <body>
 	<div class="container" id="wrapper">
@@ -43,7 +43,6 @@
 					</div>
 					<!--/.container-fluid -->
 				</nav>
-				<h1>heading from layout</h1>
 			</header>
 		</div>
 		<div class="row" id="main-content-box">
@@ -84,15 +83,21 @@
 	<script th:src="@{https://code.jquery.com/jquery-3.2.1.min.js}"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 		crossorigin="anonymous">
-		
 	</script>
 	<script
 		th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous">
-		
 	</script>
-	<script src="common-script.js"></script>
+	<script th:src="@{https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=167sq66d9ziwmz72cf7lwhrmcz4fetfkcx5syxgvoou9ywpw}"></script>
+  	<script>
+  		tinymce.init({ 
+  			selector: "textarea",
+  			toolbar: "image",
+  			plugins: "image imagetools"
+  		});
+  	</script>
+	<script th:src="@{../js/site.js}"></script>
 </body>
 </html>
 
