--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,13 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi
-	Bal Thapa</title>
-<link rel="stylesheet"
-	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
-	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-	crossorigin="anonymous" />
-<link rel="stylesheet" th:href="@{../css/site.css}" />
+<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi Bal Thapa</title>
+
+	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+		crossorigin="anonymous" />
+	<link rel="stylesheet" th:href="@{../css/site.css}" />
+	
+	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
+	
 </head>
 <body>
 	<div class="container" id="wrapper">
@@ -97,6 +99,9 @@
   			plugins: "image imagetools"
   		});
   	</script>
+  	
+	<script th:src="@{https://use.fontawesome.com/acd9b24c0b.js}"></script>
+	<script th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>  	
 	<script th:src="@{../js/site.js}"></script>
 </body>
 </html>
