category update, list

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section layout:fragment="content">
-    <p>Waiting for some awesomen stuff</p>
+    <p>Waiting for some awesome stuff</p>
   </section>
   <!-- 
 	<footer class="footer">
