--- a/src/main/resources/templates/category/editCategory.html
+++ b/src/main/resources/templates/category/editCategory.html
@@ -11,16 +11,20 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<p th:text="#{category.edit}"></p>
-						<a th:href="@{/categories}" th:text="#{category.show}"></a>
+						<a th:href="@{/category/all}" th:text="#{category.show}"></a>
 					</div>
 					<div class="panel-body">
 						<form id="categoryForm" th:method="post" th:action="@{/category/edit/{id}(id=${category.id})}" th:object="${category}">
-							<div class="alert alert-danger" th:if="${#fields.hasErrors()}">    					
-						    	<p th:each="error: ${#fields.allErrors()}" th:text="${error}"></p>    
-							</div>
-							<div class="alert alert-danger" th:if="${categoryExists}">    					
-						    	<p th:text="#{category.name.exists}"></p>    
-							</div>
+							<div class="alert alert-danger" th:if="${invalidCategory}">
+							<p th:text="#{category.name.invalid}"></p>
+						</div>
+						<div class="alert alert-danger" th:if="${categoryExists}">
+							<p th:text="#{category.name.exists}"></p>
+						</div>
+						<div class="alert alert-success" th:if="${categoryUpdated}">
+							<p th:text="#{category.update.success}"></p>
+						</div>
+						
 							<div class="form-group">
 								<label for="name" th:text="#{category.name}">Category Name</label>
 								<input type="text" th:field="*{name}" class="form-control required"/>
