--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
 	layout:decorator="layout">
 <head>
 <title>Contact</title>
@@ -18,14 +18,21 @@
 
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-md-9">
 					<div class="well well-sm">
-						<form>
+						<form th:action="@{/contact/new}" th:method="post" th:object="${contact}">
+							<div class="alert alert-success" th:if="${contactMessageSaved}">
+								<span th:text="#{contact.save.success}"></span>
+							</div>
 							<div class="row">
-								<div class="col-md-6">
+								<div class="col-md-5">
 									<div class="form-group">
 										<label for="name"> Name</label>
-										<input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+										<input type="text" th:field="*{name}" class="form-control" placeholder="Enter name"  />
+										<div class="help-block alert alert-danger error-margin" 
+											th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+											<span th:text="#{contact.name.invalid}"></span>
+										</div>
 									</div>
 									<div class="form-group">
 										<label for="email"> Email Address</label>
@@ -33,35 +40,44 @@
 											<span class="input-group-addon">
 												<span class="glyphicon glyphicon-envelope"></span> 
 											</span>
-											<input type="email" class="form-control" id="email" placeholder="Enter email" required="required" />
+											<input type="email" class="form-control" th:field="*{email}" placeholder="Enter email" />
+										</div>
+											<div class="help-block alert alert-danger error-margin" 
+											th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
 										</div>
 									</div>
 									<div class="form-group">
 										<label for="subject"> Subject</label>
-										<select id="subject" name="subject" class="form-control" required="required">
-											<option value="na" selected="">Choose One:</option>
-											<option value="service">General Inquiry</option>
+										<select id="subject" name="subject" class="form-control" >
+											<option value="" selected="">Select subject</option>
+											<option value="inquiry">General Inquiry</option>
 											<option value="suggestions">Suggestions</option>
-											<option value="product">Support</option>
+											<option value="support">Support</option>
 										</select>
+										<div class="help-block alert alert-danger error-margin" 
+											th:if="${#fields.hasErrors('subject')}" th:errors="*{subject}">
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="g-recaptcha" data-sitekey="6Le92h8UAAAAAD98tc-H7YElFW2NqbNRhFT3x45M"></div>
 									</div>
 								</div>
-								<div class="col-md-6">
+			
+								<div class="col-md-7">
 									<div class="form-group">
 										<label for="name"> Message</label>
 										<textarea name="message" id="message" class="form-control"
-											rows="9" cols="25" required="required" placeholder="Message"></textarea>
+											rows="9" cols="25" placeholder="Message"></textarea>
 									</div>
 								</div>
 								<div class="col-md-12">
-									<button type="submit" class="btn btn-primary pull-right"
-										id="btnContactUs">Send Message</button>
+									<button type="submit" class="btn btn-primary pull-right">Send Message</button>
 								</div>
 							</div>
 						</form>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<form>
 						<legend>
 							<span class="glyphicon glyphicon-globe"></span> Quick Contact
