--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -32,7 +32,7 @@
 							<ul class="nav navbar-nav">
 								<li><a th:href="@{/resume}">Resume</a></li>
 								<li><a th:href="@{/project}">Project</a></li>
-								<li><a th:href="@{/blog}">Blog</a></li>
+								<li><a th:href="@{/blog/all}">Blog</a></li>
 								<li><a th:href="@{/contact}">Contact</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
