--- a/src/main/resources/templates/blog/addBlog.html
+++ b/src/main/resources/templates/blog/addBlog.html
@@ -10,9 +10,8 @@
 		<section layout:fragment="content">
 			<!-- blog form starts -->
 			<form th:action="@{/blog/new}" th:method="post" th:object="${blog}" role="form" class="form-horizontal">
-				<div class="alert alert-success">
-					<span th:if="${blogSaved}" th:text="#{blog.save.success}">
-					</span>
+				<div th:if="${blogSaved}" class="alert alert-success">
+					<span th:text="#{blog.save.success}"></span>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-sm-2" for="title">Title:</label>
