--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -159,4 +159,11 @@ a {
 .view-all-blog-header{
 	text-align: right !important;
 }
+
+.green{
+	color:green;
+}
+.red{
+	color:red;
+}
 /* blog page ends */
