--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" th:href="@{/css/site.css}" />
 	
 	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
@@ -101,8 +102,9 @@
   	</script>
   	
 	<script th:src="@{https://use.fontawesome.com/acd9b24c0b.js}"></script>
-	<script th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>  	
+	<script th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
 	<script th:src="@{/js/site.js}"></script>
+	<script th:src="@{/js/sweetalert.min.js}"></script>
 </body>
 </html>
 
