--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,57 +2,60 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi Bal Thapa</title>
+<title layout:title-pattern="$CONTENT_TITLE :: $LAYOUT_TITLE">Buddhi
+	Bal Thapa</title>
 
-	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		crossorigin="anonymous" />
-	<link rel="stylesheet" th:href="@{/css/site.css}" />
-	
-	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
-	<script src='https://www.google.com/recaptcha/api.js'></script>
+<link rel="stylesheet"
+	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous" />
+<link rel="stylesheet" th:href="@{/css/site.css}" />
+
+<link rel="stylesheet"
+	th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
+<link rel="stylesheet" th:href="@{/css/sweetalert.css}" />
+<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
-	<div class="container" id="wrapper">
-		<div class="row">
-			<header>
-				<nav class="navbar navbar-inverse">
-					<div class="container-fluid">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed"
-								data-toggle="collapse" data-target="#navbar"
-								aria-expanded="false" aria-controls="navbar">
-								<span class="sr-only">Toggle navigation</span> <span
-									class="icon-bar"></span> <span class="icon-bar"></span> <span
-									class="icon-bar"></span>
-							</button>
-							<a class="navbar-brand" th:href="@{/}">Project name</a>
-						</div>
-						<div id="navbar" class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								<li><a th:href="@{/resume}">Resume</a></li>
-								<li><a th:href="@{/project}">Project</a></li>
-								<li><a th:href="@{/blog/all}">Blog</a></li>
-								<li><a th:href="@{/contact}">Contact</a></li>
-							</ul>
-							<ul class="nav navbar-nav navbar-right">
-								<li>
-									<a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a>
-								</li>
-							</ul>
-						</div>
-						<!--/.nav-collapse -->
-					</div>
-					<!--/.container-fluid -->
-				</nav>
-			</header>
+	<div class="content">
+	<header>
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+						aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" th:href="@{/}">Project name</a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a th:href="@{/resume}">Resume</a></li>
+						<li><a th:href="@{/project}">Project</a></li>
+						<li><a th:href="@{/blog/all}">Blog</a></li>
+						<li><a th:href="@{/contact}">Contact</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a th:href="@{/login}"><span
+								class="glyphicon glyphicon-log-in"></span> Login</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+			<!--/.container-fluid -->
+		</nav>
+	</header>
+		<div class="container">
+			<div class="row" id="main-content-box">
+				<section layout:fragment="content">
+					<p>Page content goes here</p>
+				</section>
+			</div>
 		</div>
-		<div class="row" id="main-content-box">
-			<section layout:fragment="content">
-				<p>Page content goes here</p>
-			</section>
-		</div>
+	
 	</div>
 	<footer class="footer">
 		<div class="container">
@@ -78,31 +81,35 @@
 							<li><a href="">linkedin</a></li>
 							<li><a href="">twitter</a></li>
 						</ul>
-					</div>	
+					</div>
 				</div>
 			</div>
-	  	</div>
+		</div>
 	</footer>
 	<script th:src="@{https://code.jquery.com/jquery-3.2.1.min.js}"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 		crossorigin="anonymous">
+		
 	</script>
 	<script
 		th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous">
+		
 	</script>
-	<script th:src="@{https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=167sq66d9ziwmz72cf7lwhrmcz4fetfkcx5syxgvoou9ywpw}"></script>
-  	<script>
-  		tinymce.init({ 
-  			selector: "textarea",
-  			toolbar: "image",
-  			plugins: "image imagetools"
-  		});
-  	</script>
-  	
+	<script
+		th:src="@{https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=167sq66d9ziwmz72cf7lwhrmcz4fetfkcx5syxgvoou9ywpw}"></script>
+	<script>
+		tinymce.init({
+			selector : "textarea",
+			toolbar : "image",
+			plugins : "image imagetools"
+		});
+	</script>
+
 	<script th:src="@{https://use.fontawesome.com/acd9b24c0b.js}"></script>
-	<script th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
+	<script
+		th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
 	<script th:src="@{/js/site.js}"></script>
 	<script th:src="@{/js/sweetalert.min.js}"></script>
 </body>
