--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -102,8 +102,10 @@
 	<script>
 		tinymce.init({
 			selector : "textarea",
-			toolbar : "image",
-			plugins : "image imagetools"
+			plugins : "image imagetools media",
+			toolbar: "image media",
+			media_live_embeds: true
+			
 		});
 	</script>
 
