add more tinymce media tool

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -102,8 +102,8 @@
 	<script>
 		tinymce.init({
 			selector : "textarea",
-			plugins : "image imagetools media",
-			toolbar: "image media",
+			plugins : "image imagetools media codesample code textcolor colorpicker emoticons wordcount autoresize charmap lists paste preview spellchecker",
+			toolbar: "image media codesample code forecolor backcolor emoticons charmap media",
 			media_live_embeds: true
 			
 		});
