--- a/src/main/resources/templates/blog/addBlog.html
+++ b/src/main/resources/templates/blog/addBlog.html
@@ -25,7 +25,7 @@
 					<label class="control-label col-sm-2" for="title">Title:</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{title}" placeholder="Blog Title" />
-						<span th:if="${#fields.hasErrors('title')}" th:error="*{title}" class="help-block alert alert-danger"></span>
+						<span th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="help-block alert alert-danger"></span>
 					</div>
 				</div>
 				<div class="form-group">
@@ -35,14 +35,14 @@
 							<option value="">Select Category</option>
 							<option th:each="category: ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
 						</select>
-						<span th:if="${#fields.hasErrors('category')}" th:error="*{category}" class="help-block alert alert-danger"></span>
+						<span th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="help-block alert alert-danger"></span>
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label col-sm-2" for="description">Description:</label>
 					<div class="col-sm-10">
 						<textarea rows="15" cols="100" th:field="*{description}"></textarea>
-						<span th:if="${#fields.hasErrors('description')}" th:error="*{description}" class="help-block alert alert-danger"></span>
+						<span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="help-block alert alert-danger"></span>
 					</div>
 
 				</div>
