--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -66,7 +66,7 @@
 								<div class="col-md-7">
 									<div class="form-group">
 										<label for="name"> Message</label>
-										<textarea name="message" id="message" class="form-control"
+										<textarea name="message" id="message" class="contact-textarea form-control "
 											rows="9" cols="25" placeholder="Message"></textarea>
 									</div>
 								</div>
