--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,6 @@
 	layout:decorator="layout">
 <head>
 <title>Login</title>
-<script src="content-script.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -24,41 +23,41 @@
 						</div>
 
 						<div class="panel-body" id="login-panel-body">
-							<div style="display: none" id="login-alert"
-								class="alert alert-danger col-sm-12">
+							<div th:if="${param.error}" id="login-alert" class="alert alert-danger col-sm-12">
+								<span>Invalid Email or Password</span>
 							</div>
 
-							<form id="loginform" class="form-horizontal" role="form">
+							<form th:action="@{/login}" th:method="POST" id="loginform" class="form-horizontal" role="form">
 								<div class="input-group login-input">
 									<span class="input-group-addon">
 										<i class="glyphicon glyphicon-user"></i>
 									</span> 
-									<input id="email" type="email" class="form-control" name="email" 
-									placeholder="enter your email" />
+									<input id="email" type="email" class="form-control" name="email" placeholder="enter your email" />
 								</div>
 
 								<div class="input-group login-input">
 									<span class="input-group-addon">
 										<i class="glyphicon glyphicon-lock"></i>
 									</span>
-									<input id="password" type="password" class="form-control"
-										name="password" placeholder="password" />
+									<input id="password" type="password" class="form-control" name="password" placeholder="password" />
 								</div>
-
-								<div class="input-group">
+								<div class="col-sm-6">
 									<div class="checkbox">
 										<label>
-											<input id="login-remember" type="checkbox"
-											name="remember" value="1" /> Remember me
+											<input id="login-remember" type="checkbox" name="remember" value="1" /> Remember me
 										</label>
 									</div>
+								</div>
+								<div class="col-sm-6 controls">
+									<button type="submit" class="btn btn-success login-button">Login </button>
 								</div>
 
 								<div style="margin-top: 10px" class="form-group">
 									<!-- Button -->
-									<div class="col-sm-12 controls">
-										<button type="submit" class="btn btn-success">Login </button>
+									<div class="col-sm-4">
+										<a th:href="@{/register}">Register </a>
 									</div>
+									
 								</div>
 
 							</form>
