login logout success

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -110,7 +110,7 @@
 		tinymce.init({
 			selector : "textarea",
 			editor_deselector : "mceNoEditor",
-			plugins : "image imagetools media codesample code textcolor colorpicker emoticons wordcount autoresize charmap lists paste preview spellchecker",
+			plugins : "image imagetools media codesample code textcolor colorpicker emoticons wordcount autoresize charmap paste preview spellchecker advlist",
 			toolbar: "image media codesample code forecolor backcolor emoticons charmap media",
 			media_live_embeds: true
 			
